added the credits

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
         </div>
       </div>
     </div>
+    <div>
+      <a href="https://github.com/doriancodz/shecodes-week6-homework"
+        >Open-Source Code
+      </a>
+      by Dorian Saberifar
+    </div>
   </body>
   <script src="src/script.js"></script>
 </html>
