--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="col-2"><input type="submit" value="Search" /></div>
           </div>
         </div>
+        <button id="current">Current</button>
       </form>
       <header>
         <div class="container">
@@ -99,7 +100,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="credits">
       <a href="https://github.com/doriancodz/shecodes-week6-homework"
         >Open-Source Code
       </a>
